# scale-build

./: .gitignore  CODEOWNERS  MANIFEST.in  Makefile  README.md  change_branches.sh  chroot.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  update.sh
.github/workflows/: build-disabled.yml  build.yml  codeql-analysis.yml  format_prettier.yml  lint.yml  manifest.yml  prettier.yml  stale.yml  test.yaml
conf/: build.manifest  requirements.txt  sources.list
conf/cd-files/: .bash_profile.swp  bash_profile  serial-getty@.service
jenkins/: BuildPR  Full-NoPublish  Full-sentry-test  FullBuild  Incremental-NoPublish  Incremental-Publish  IncrementalBuild  Publish  Publish-ISO  Publish-Test  Publish-Update
keys/: helm.gpg  kubernetes.gpg  truenas.gpg
scale_build/: __main__.py  branch_out.py  checkout.py  clean.py  config.py  epoch.py  exceptions.py  extensions.py  iso.py  main.py  package.py  preflight.py  update_image.py  upstream_package_updates.py  validate.py
scale_build/bootstrap/: apt_preferences.py  bootstrapdir.py  cache.py  cleanup.py  configure.py  hash.py  logger.py  utils.py
scale_build/image/: bootstrap.py  iso.py  logger.py  manifest.py  mtree.py  update.py  utils.py
scale_build/sources/: source.py
scale_build/utils/: environment.py  git_utils.py  kernel.py  logger.py  manifest.py  package.py  paths.py  reference_files.py  run.py  system.py  variables.py
scripts/: build.sh  build_manifest.py  build_packages.py  build_update_manifest.py  finalize_rootfs.py  functions.sh  get_packages_to_build.py  gitlog.py  grub.cfg  mk-zfs-modules  parse_deps.pl  validate_manifest.py  verify_rootfs.py
scripts/build_packages/: get_packages.py  utils.py
truenas_install/: __main__.py  dhs.py  fhs.py  utils.py
(+21 files in other folders)
