[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scale_build"
description = "A build framework for TrueNAS SCALE"
readme = "README.md"
license = {text = "BSD"}
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "coloredlogs",
    "toposort",
    "requests",
    "pyyaml",
]

[project.scripts]
scale_build = "scale_build.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scale_build*", "truenas_install*"]

[tool.setuptools]
include-package-data = true